--- a/templates/index.html
+++ b/templates/index.html
@@ -768,8 +768,8 @@
 
                 try {
                     const formData = new FormData(infoForm);
-                    // const API_BASE = "https://qimenaskios.onrender.com";
-                    const API_BASE = "http://localhost:5001";
+                    const API_BASE = "https://qimenaskios.onrender.com";
+                    // const API_BASE = "http://localhost:5001";
 
                     const response = await fetch(`${API_BASE}/calculate`, {
                     method: 'POST',
