Fix HTML comments and structure in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -706,6 +706,8 @@
                             </button>
                         </div>
                     </div>
+                </div> <!-- 🔚 结束 .main-container -->
+            </section> <!-- 🔚 结束 section-home -->
 
             <!-- 🟡 奇门知识库：其他板块内容 -->
 
