Update contact email addresses in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -736,7 +736,7 @@
                             <h3>聯絡方式</h3>
                             <p>
                                 如您對本網站內容有任何問題，歡迎透過 Email 聯繫我們：  
-                                <a href="mailto:devlongqing@gmail.com">devlongqing@gmail.com</a>
+                                <a href="mailto:contact@qimenask.com">contact@qimenask.com</a>
                             </p>
                     
                             <h3>免責聲明</h3>
@@ -767,7 +767,7 @@
                             <h3>联系方式</h3>
                             <p>
                                 如需联系本站，请发送邮件至：  
-                                <a href="mailto:devlongqing@gmail.com">devlongqing@gmail.com</a>
+                                <a href="mailto:contact@qimenask.com">contact@qimenask.com</a>
                             </p>
                     
                             <h3>免责声明</h3>
@@ -797,7 +797,7 @@
                             <h3>Contact</h3>
                             <p>
                                 For inquiries or feedback, please email us at:  
-                                <a href="mailto:contact@qimenask.com">devlongqing@gmail.com</a>
+                                <a href="mailto:contact@qimenask.com">contact@qimenask.com</a>
                             </p>
                     
                             <h3>Disclaimer</h3>
