Adjust padding and margin for qa-section styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -499,6 +499,13 @@
                 width: 100%;
             }
         }
+            .qa-section:not(#section-home) {
+                padding-top: 0;
+            }
+            
+            .qa-section:not(#section-home) .qa-section-lang:first-child > h1:first-child {
+                margin-top: 0 !important;
+            }
     </style>
 </head>
 <body>
